Cleaned up the code, after testing all the endpoints